<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="280sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/OnOff"
                android:textColor="#826C6D"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="84dp" />

            <TextView
                android:id="@+id/alarm2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/regular"
                android:text="@string/set1"
                android:textSize="16sp" />
        </LinearLayout>

        <Switch
            android:id="@+id/ala"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:checked="false"
            android:foregroundGravity="fill_horizontal|center|clip_vertical"
            android:minWidth="56dp"
            android:minHeight="56dp"
            android:showText="false"
            android:switchMinWidth="70dp"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="281dp"
            tools:layout_editor_absoluteY="140dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="280sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/Service"
                android:textColor="#826C6D"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="140dp" />

            <TextView
                android:id="@+id/service2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/set2"
                android:textSize="16sp" />
        </LinearLayout>

        <Switch
            android:id="@+id/ser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="clip_horizontal|center|clip_vertical|fill_horizontal"
            android:checked="false"
            android:foregroundGravity="center"
            android:minWidth="56dp"
            android:minHeight="56dp"
            android:switchMinWidth="70dp"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="260dp"
            tools:layout_editor_absoluteY="84dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rec"
        android:textColor="@color/white" />


</LinearLayout>